# Churn-Analysis-AI

./: .env.example  .gitignore  README.md  churn_model.pkl  generate_data.py  main.py  pyproject.toml  requirements.txt  telecom_churn.csv  train.py
services/: sentiment_service.py
