[project]
name = "fake-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "faker>=40.19.1",
    "fastapi>=0.136.3",
    "groq>=0.31.0",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.48.0",
]
